# playground-twitch-player

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  meson.build
.github/workflows/: nightly-release.yml
data/: local.twitch-player.desktop  local.twitch-player.gresource.xml
scripts/: build-appimage.sh  check-deps.sh
src/: app_main.rs  channel_switcher_overlay.c  channel_switcher_overlay.h  channel_switcher_overlay.rs  chat_assets.c  chat_assets.h  chat_assets.rs  chat_panel.c  chat_panel.h  chat_panel.rs  grid_player.c  grid_player.h  grid_player.rs  lib.rs  main.c  main.rs  player_defaults.h  player_footer.c  player_footer.h  player_footer.rs  player_icons.c  player_icons.h  player_icons.rs  player_motion.c  player_motion.h  player_motion.rs  player_overlay_controls.c  player_overlay_controls.h  player_overlay_controls.rs  player_session.c  player_session.h  player_session.rs  player_stream_quality.c  player_stream_quality.h  player_stream_quality.rs  player_stream_settings.c  player_stream_settings.h  player_stream_settings.rs  player_style.c  player_style.h  (+26 more)
tests/: test_chat_assets.c  test_chat_assets.rs  test_chat_panel.c  test_chat_panel.rs  test_grid_player.c  test_grid_player.rs  test_player_surface.rs  test_settings.c  test_settings.rs  test_single_player.rs  test_twitch_chat.c  test_twitch_chat.rs  test_twitch_stream_info.c  test_twitch_stream_info.rs
